--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "private": true,
   "dependencies": {
     "@mediapipe/camera_utils": "^0.3.1640029074",
+    "@mediapipe/control_utils": "^0.6.1629159505",
+    "@mediapipe/control_utils_3d": "^0.3.1635987963",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
     "@mediapipe/hands": "^0.4.1646424915",
+    "@mediapipe/pose": "^0.5.1635988162",
     "gamejs": "^2.0.2"
   },
   "devDependencies": {
