--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build:parcel": "parcel build ./src/index.html --no-scope-hoist",
+    "build": "npm run clean && npm run build:parcel",
+    "clean": "rm -rf dist/*"
   },
   "version": "1.0.0",
   "repository": "git@github.com:valenzmanu/btl-arcade.git",
